--- a/source/localizable/home.fr.html.erb
+++ b/source/localizable/home.fr.html.erb
@@ -439,6 +439,13 @@
               <p class='member-description'>Teaser</p>
             </div>
           </div>
+          <div class='col-xs-6 col-sm-3 text-center'>
+            <div class='member'>
+              <%= image_tag "stephanegirard.jpg" , class: 'img-circle img-responsive member-picture' %>
+              <p class='member-name'>Stéphane GIRARD</p>
+              <p class='member-description'>Cie Gratte-ciel associée à Basinga pour la recherche de nouveaux matériaux</p>
+            </div>
+          </div>
           <br>
           <br>
         </div>
