new version bug fixed

--- a/source/index.fr.html.erb
+++ b/source/index.fr.html.erb
@@ -2,7 +2,7 @@
   <div id='index'>
     <div class='visible-sm visible-md visible-lg'>
   <video autoplay id="index__video">
-    <source src="video/Basinga_preambule_final.mp4" type="video/mp4">
+    <source src="video/preambule_basinga.mp4" type="video/mp4">
       <%= image_tag '../video/funambule.jpg', class: 'img-responsive' %>
   </video>
   </div>
