--- a/source/localizable/gallery.en.html.erb
+++ b/source/localizable/gallery.en.html.erb
@@ -725,7 +725,7 @@
           </div>
           <div class='col-xs-12'>
             <div class='text-center'>
-              <p><% link_to '/contact.html' do %>
+              <p><% link_to "/#{I18n.locale}/contact.html" do %>
               <%= image_tag 'gallery/traverse/vous/1etvous.jpg'%>
               <% end %></p>
             </div>
