--- a/source/stylesheets/pages/_blog.css.scss
+++ b/source/stylesheets/pages/_blog.css.scss
@@ -8,3 +8,19 @@
   border-radius:15px;
   margin-left : auto;
 }
+
+.blog--image{
+  margin: 0 auto;
+}
+
+.blog--quote h2 {
+  font-size: 2.5vmin;
+}
+
+.blog--video .tmblr-embed{
+  margin: 15px 0;
+}
+
+.blog__post img {
+  max-width: 100%;
+}
